--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@ title: Paul E. Soto
 </script>
 
   
-<img src="profile_picture.jpg" alt="Paul Soto pic" style="width:240px;height:360px;" title="Paul Soto (Photo Credit: Fernando Fernandez)"; algin="middle">
+<img src="profile_picture.jpg" alt="Zhiqing Hong" style="width:240px;height:360px;" title="Zhiqing Hong (Photo Credit: Fernando Fernandez)"; algin="middle">
 <br>
-Welcome! My name is Paul and I am a financial economist at the Federal Deposit Insurance Corporation in Washington, D.C.  and also teach Text Mining for Economics and Finance at the University of Maryland.
-
+Welcome to my page! My name is Zhiqing Hong and I am a third-year master student majoring in computer science in Zhejiang University, China.
 <br><br>
-My research interests lie in financial economics. I've researched how banks cause credit frictions to the real economy, how they interact with regulators and how their CEOs/CFOs words can be used to proxy the uncertainty banks face. Helping me along the way, I've been learning how to apply recent techniques in machine learning and natural language processing to these economic problems. Feel free to look at my <a href="https://pesoto.github.io/research" target="_self">research</a> and my <a href="https://pesoto.github.io/research" target="_self">tutorials</a> to learn more!
+My research interests lie in the broad field of machine learning and data mining. Feel free to look at my <a href="https://pesoto.github.io/research" target="_self">research</a> and my <a href="https://pesoto.github.io/research" target="_self">tutorials</a> to learn more!
+I have experience in medical data analysis using machine learning, and 3-D image classification with convolution neural network. I am always excited to change ideas
+and communicate with others!
 <br><br>
  <i>NOTE:</i> This is a personal webpage and any views or information reflect solely the author and are not the views of the FDIC.
 </div>
