--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Zhiqing Hong
 <br>
 Welcome to my page! My name is Zhiqing Hong and I am a third-year master student majoring in computer science in Zhejiang University, China.
 <br><br>
-My research interests lie in the broad field of machine learning and data mining. Feel free to look at my <a href="https://pesoto.github.io/research" target="_self">research</a> and my <a href="https://pesoto.github.io/research" target="_self">tutorials</a> to learn more!
+My research interests lie in the broad field of machine learning and data mining. Feel free to look at my <a href="https://killuakukuroo.github.io/research" target="_self">research</a> and my <a href="https://killuakukuroo.github.io/research" target="_self">tutorials</a> to learn more!
 I have experience in medical data analysis using machine learning, and 3-D image classification with convolution neural network. I am always excited to change ideas
 and communicate with others!
 <br><br>
