--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ title: Zhiqing Hong
 <br>
 Welcome to my page! My name is Zhiqing Hong and I am a third-year master student majoring in computer science in Zhejiang University, China.
 <br><br>
-My research interests lie in the broad field of machine learning and data mining. Feel free to look at my <a href="https://killuakukuroo.github.io/research" target="_self">research</a> and my <a href="https://killuakukuroo.github.io/research" target="_self">tutorials</a> to learn more!
+My research interests lie in the broad field of machine learning and data mining.
 I have experience in medical data analysis using machine learning, and 3-D image classification with convolution neural network. I am always excited to change ideas
 and communicate with others!
+Please check out my <a href="https://www.linkedin.com/in/zhiqing-hong-781a62109/">CV</a>  for details!
 <br><br>
- <i>NOTE:</i> This is a personal webpage and any views or information reflect solely the author and are not the views of the FDIC.
 </div>
