--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@ Welcome to my page! My name is Zhiqing Hong and I am a third-year master student
 My research interests lie in the broad field of machine learning and data mining.
 I have experience in medical data analysis using machine learning, and 3-D image classification with convolution neural network. I am always excited to change ideas
 and communicate with others!
-Please check out my <a href="https://www.linkedin.com/in/zhiqing-hong-781a62109/">CV</a>  for details!
+Please check out my <a href="https://killuakukuroo.github.io/research/CV.pdf">CV</a>  for details!
 <br><br>
 </div>
