change index and header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@ title: Zhiqing Hong
 Welcome to my page! My name is Zhiqing Hong and I am a third-year master student majoring in computer science in Zhejiang University, China.
 <br><br>
 My research interests lie in the broad field of machine learning and data mining.
-I have experience in medical data analysis using machine learning, and 3-D image classification with convolution neural network. I am always excited to change ideas
-and communicate with others!
+I have research experience in the application of machine learning in medical data analysis, 3-D image classification with convolutional neural network, affective 
+computing through physiological signal.
+I am always excited to share and communicate with others!
 Please check out my <a href="https://killuakukuroo.github.io/research/CV.pdf">CV</a>  for details!
 <br><br>
 </div>
