--- a/index.html
+++ b/index.html
@@ -23,4 +23,18 @@ computing through physiological signal.
 I am always excited to share and communicate with others!
 Please check out my <a href="https://killuakukuroo.github.io/research/CV.pdf">CV</a>  for details!
 <br><br>
+
+<br>
+<b>Education:</b><br>
+2017.09-2020.03, Zhejiang University, M.Eng. in Computer Technology, Department of Computer Science<br>
+
+2013.08-2017.07, Xidian University, B.Eng. in Software Engineering, School of Software Engineering<br>
+
+<br>
+<b>Language:</b><br>
+IELTS (2019.01) - Listening: 8.0; Reading: 8.0; Writing: 6.0; Speaking: 6.0; Overall: 7.0<br>
+GRE (2019.09) &nbsp;  - Verbal:154 (64%); Quantitative:170 (96%); Analytical Writing:3.5 (39%)<br>
+  
+<br>
+
 </div>
