--- a/words.html
+++ b/words.html
@@ -6,6 +6,9 @@
 那一天我二十一岁，在我一生的黄金时代，我有好多奢望。我想爱，想吃，还想在一瞬间变成天上半明半暗的云，后来我才知道，生活就是个缓慢受锤的过程，
 人一天天老下去，奢望也一天天消逝，最后变得像挨了锤的牛一样。可是我过二十一岁生日时没有预见到这一点。我觉得自己会永远生猛下去，什么也锤不了我。 -- 王小波
 </p>
+<p>
+<a href="https://www.jiqizhixin.com/articles/2020-04-16-10">周志华：Boosting学习理论的探索 —— 一个跨越30年的故事</a>
+</p>
 </body>
 
 </html>
